--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/assets/Image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KAVANTI</title>
+    <title>KAVANTI | Today | Tomorrow | Always</title>
   </head>
   <body>
     <div id="root"></div>
