--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/assets/Image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Limit referrer leakage -->
+    <meta http-equiv="Referrer-Policy" content="no-referrer">
     <title>KAVANTI | Today | Tomorrow | Always</title>
   </head>
   <body>
